--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,6 +23,7 @@
 		<span><a title = "注册" href = "/reg">reg</a></span>
 		<span><a title = "登陆" href = "/login">login</a></span>
 		<% } %>
+		<span><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search" /></form></span>
   </nav>
   
   <article>	
