--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include header %>
 <% posts.forEach(function (post, index) { %>
-  <p><h2><a href="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></h2><a href="/u/<%= post.name %>"><img src="<%= post.head%>" class ="r_head" /></a></p>
+  <p><h2><a href="/p/<%= post._id %>"><%= post.title %></a></h2><a href="/u/<%= post.name %>"><img src="<%= post.head%>" class ="r_head" /></a></p>
   <p class="info">
 	<% if (post.reprint_info.reprint_from) { %>
   <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">原文链接</a>
