--- a/views/comment2.ejs
+++ b/views/comment2.ejs
@@ -1,9 +1,11 @@
 <br />
 <% post.comments.forEach(function(comment,index){ %>
-	<p><a href = "<%= comment.website %>"><%= comment.name %></a>
-	<span class = "info">回复于<%= comment.time %></span>
+	<div style= "padding-left:4em">
+		<p><img src="<%= comment.head %>" class="l_head"><a href = "<%= comment.website %>"><%= comment.name %></a>
+		<span class = "info">回复于<%= comment.time %></span>
 	</p>
 	<p><%- comment.content %></p>
+	</div>
 <% }) %>
 
 <form method= "post">
@@ -16,5 +18,7 @@
 	邮箱：<input type = "email" name = "email" /><br />
 	网址：<input type = "text" name = "website" value = "http://>" /><br />
 <% }%>
-
+	<textarea name = "comment" rows = "5" cols = "80"></textarea> <br />
+	<input type = "submit" value = "留言">
+</form>
 
