--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,24 +1,19 @@
 <br />
-<% post.comments.forEach(function(comment,index){ %>
-	<div style= "padding-left:4em">
-		<p><img src="<%= comment.head %>" class="l_head"><a href = "<%= comment.website %>"><%= comment.name %></a>
-		<span class = "info">回复于<%= comment.time %></span>
-	</p>
-	<p><%- comment.content %></p>
-	</div>
-<% }) %>
 
-<form method= "post">
-<% if (user) { %>
-	姓名：<input type = "text" name = "name" value = "<%= user.name %>" /><br />
-	邮箱：<input type = "email" name = "email" value = "<%= user.email%>" /><br />
-	网址：<input type = "text" name = "website" value = "/u/<%= user.name%>" /><br />
-<% }else { %>
-	姓名：<input type = "text" name = "name" /><br />
-	邮箱：<input type = "email" name = "email" /><br />
-	网址：<input type = "text" name = "website" value = "http://>" /><br />
-<% }%>
-	<textarea name = "comment" rows = "5" cols = "80"></textarea> <br />
-	<input type = "submit" value = "留言">
-</form>
 
+<!-- 多说评论框 start -->
+	<div class="ds-thread" data-category="$cat[catid]" data-thread-key="$article[aid]" data-title="$article[title]" data-author-key="$article[uid]"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"wybcd"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
