--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<meta charset = "UFT-8"/>
+  	<meta charset = "utf-8"/>
     <title>blog</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />	
+		<script src='/ckeditor/ckeditor.js'></script>
   </head>
   
   <body>
@@ -33,7 +34,3 @@
   	<% if(error){ %>
   		<div><%= error %></div>
   		<% } %>
-  		
-  		
-  
-  
