--- a/views/post.ejs
+++ b/views/post.ejs
@@ -7,9 +7,8 @@
 		<input type = "text" name = "tag2" />
 		<input type = "text" name = "tag3" /><br />
 		正文:<br />
-		<textarea name = "post" rows = "20" cols = "100"></textarea><br />
+		<textarea name = "post" ></textarea><br />
 		<input type = "submit" value = "发表" />
-		<script src="/ckeditor/ckeditor.js"></script>
 	  <script> 
 			CKEDITOR.replace( 'post' );
 		</script>
