--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -1,12 +1,8 @@
 <%- include header %>
 <ul class="archive">
-	<% var lastYear = 0 %>
 	<% posts.forEach(function (post, index) { %>
-  <% if (lastYear != post.time.year) { %>
-    <li><h3><%= post.time.year %></h3></li>
-  <% lastYear=post.time.year } %>
-  <li><time><%= post.time.day %></time></li>
-  <li><a href="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></li>
-<% }) %>
+		<li><h4><%= post.time.day %></h4></li>
+		<li><a href="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>"><%= post.title %></a></li>
+	<% }) %>
 </ul>
 <%- include footer %>
