--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,8 +1,11 @@
 </article>
-  <span>友情链接:
-  	<h3><a href="https://love.alipay.com/donate/donateSingle.htm?name=201304201216494301">支付宝公益网</a>
-   <a href="http://www.onefoundation.cn/html/cn/beneficence.html">壹基金</a>
-   </h3>
+	<div id="link">
+	<span>友情链接:
+		<h3>
+			<a href="https://love.alipay.com/donate/donateSingle.htm?name=201304201216494301">支付宝公益网</a>
+			<a href="http://www.onefoundation.cn/html/cn/beneficence.html">壹基金</a>
+		</h3>
   </span>
+	</div>
   </body>
 </html>
