--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,11 +10,9 @@
   </head>
   
   <body>
-  <header>
-    <h1><%= title %></h1>
-  </header>
-  
-  <nav>
+	
+  <div class = "navBar">
+	<nav>
 		<span><a title = "主页" href = "/">home</a></span>
 		<span><a title = "存档" href = "/archive">archive</a></span>
 		<span><a title = "标签" href = "/tags">tags</a></span>
@@ -28,6 +26,11 @@
 		<% } %>
 		<span><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search" /></form></span>
   </nav>
+	</div>
+  <header>
+    <h1><%= title %></h1>
+  </header>
+ 
   
   <article>	
   	<% if(success){ %>
